--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "~4.16.1",
     "express-async-errors": "^3.1.1",
     "express-validator": "^6.14.0",
+    "google-ads-api": "^10.0.2",
     "google-auth-library": "^7.14.0",
     "http-errors": "~1.6.3",
     "http-status-codes": "^2.1.4",
